changes to scraping document. can now scrape chords from chord page

--- a/src/01 - Scraping - Extracting filter criteria.ipynb
+++ b/src/01 - Scraping - Extracting filter criteria.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
     "import codecs\n",
     "import pandas as pd\n",
     "\n",
-    "HTML_PATH = '/Users/xf20939/Desktop/PERFECT CHORDS by Ed Sheeran @ Ultimate-Guitar.Com.html'\n",
+    "HTML_PATH = '/Users/xf20939/Desktop/HALLELUJAH CHORDS (ver 2) by Jeff Buckley @ Ultimate-Guitar.Com.html'\n",
     "CHORD_CLASS_NAME = '_3PpPJ OrSDI'\n",
     "URL = 'https://tabs.ultimate-guitar.com/tab/ed-sheeran/perfect-chords-1956589'\n",
     "INFO_CLASS_NAME = '_3rlxz'\n"
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,13 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def createDF(song_information, chord_information):\n",
+    "def createDF(title, song_information, chord_information):\n",
     "    #populates a dataframe with chord info and song info (and later, the title)\n",
     "    chords_df = pd.DataFrame()\n",
+    "    chords_df['title'] = [title]\n",
     "    chords_df['song_information'] = [song_information]\n",
     "    chords_df['chords'] = [chord_information]\n",
     "    return chords_df\n",
@@ -263,19 +264,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
     "chord_page_soup = getSoup(HTML_PATH)\n",
+    "title = chord_page_soup.find('title').contents[0]\n",
     "chords = getChordsForSpecificSongPage(chord_page_soup, CHORD_CLASS_NAME)\n",
     "song_info = getSongInfo(chord_page_soup, INFO_CLASS_NAME)\n",
-    "chords_df =createDF(song_info, chords)"
+    "chords_df =createDF(title, song_info, chords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
@@ -299,6 +301,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>title</th>\n",
        "      <th>song_information</th>\n",
        "      <th>chords</th>\n",
        "    </tr>\n",
@@ -306,22 +309,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[Capo: 1st fret\\n, Play: G\\n, Key: Ab\\n,  \\n, ...</td>\n",
-       "      <td>[G, G, Em, C, D, G, Em, C, D, G, Em, C, G, D, ...</td>\n",
+       "      <td>HALLELUJAH CHORDS (ver 2) by Jeff Buckley @ Ul...</td>\n",
+       "      <td>[Capo 1 for the official video  https://www.yo...</td>\n",
+       "      <td>[C, Am, C, Am, C, Am, C, Am, F, G, C, G, C, F,...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
+       "                                               title  \\\n",
+       "0  HALLELUJAH CHORDS (ver 2) by Jeff Buckley @ Ul...   \n",
+       "\n",
        "                                    song_information  \\\n",
-       "0  [Capo: 1st fret\\n, Play: G\\n, Key: Ab\\n,  \\n, ...   \n",
+       "0  [Capo 1 for the official video  https://www.yo...   \n",
        "\n",
        "                                              chords  \n",
-       "0  [G, G, Em, C, D, G, Em, C, D, G, Em, C, G, D, ...  "
+       "0  [C, Am, C, Am, C, Am, C, Am, F, G, C, G, C, F,...  "
       ]
      },
-     "execution_count": 331,
+     "execution_count": 365,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,129 +339,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 357,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>song_information</th>\n",
+       "      <th>chords</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HALLELUJAH CHORDS (ver 2) by Jeff Buckley @ Ul...</td>\n",
+       "      <td>[Capo 1 for the official video  https://www.yo...</td>\n",
+       "      <td>[C, Am, C, Am, C, Am, C, Am, F, G, C, G, C, F,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  HALLELUJAH CHORDS (ver 2) by Jeff Buckley @ Ul...   \n",
+       "\n",
+       "                                    song_information  \\\n",
+       "0  [Capo 1 for the official video  https://www.yo...   \n",
+       "\n",
+       "                                              chords  \n",
+       "0  [C, Am, C, Am, C, Am, C, Am, F, G, C, G, C, F,...  "
+      ]
+     },
+     "execution_count": 357,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chords_df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 342,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PERFECT CHORDS by Ed Sheeran @ Ultimate-Guitar.Com\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(chord_page_soup.find('title').contents[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['G',\n",
-       " 'G',\n",
-       " 'Em',\n",
+       "['C',\n",
+       " 'Am',\n",
        " 'C',\n",
-       " 'D',\n",
-       " 'G',\n",
-       " 'Em',\n",
+       " 'Am',\n",
        " 'C',\n",
-       " 'D',\n",
-       " 'G',\n",
-       " 'Em',\n",
+       " 'Am',\n",
        " 'C',\n",
+       " 'Am',\n",
+       " 'F',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'G',\n",
-       " 'Em',\n",
-       " 'C',\n",
-       " 'D',\n",
-       " 'Em',\n",
        " 'C',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'Em',\n",
+       " 'C',\n",
+       " 'F',\n",
+       " 'G',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'G',\n",
+       " 'E7',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'Am',\n",
+       " 'F',\n",
        " 'C',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'Em',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'G',\n",
        " 'C',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'Em',\n",
+       " 'C',\n",
+       " 'F',\n",
+       " 'G',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'G',\n",
+       " 'E7',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'Am',\n",
+       " 'F',\n",
        " 'C',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'G',\n",
-       " 'G',\n",
-       " 'D/F#',\n",
-       " 'Em',\n",
-       " 'D',\n",
        " 'C',\n",
-       " 'D',\n",
-       " 'G',\n",
-       " 'Em',\n",
+       " 'Am',\n",
        " 'C',\n",
-       " 'D',\n",
-       " 'G',\n",
-       " 'Em',\n",
+       " 'Am',\n",
        " 'C',\n",
-       " 'D',\n",
+       " 'Am',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'F',\n",
        " 'G',\n",
-       " 'Em',\n",
        " 'C',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'G',\n",
-       " 'Em',\n",
        " 'C',\n",
-       " 'D',\n",
-       " 'Em',\n",
-       " 'C',\n",
+       " 'F',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'Em',\n",
-       " 'C',\n",
+       " 'Am',\n",
+       " 'F',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'Em',\n",
+       " 'E7',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'Am',\n",
+       " 'F',\n",
        " 'C',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'Em',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'G',\n",
        " 'C',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'G',\n",
-       " 'G',\n",
-       " 'Em',\n",
        " 'C',\n",
-       " 'D',\n",
-       " 'Em',\n",
-       " 'C',\n",
+       " 'F',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'Em',\n",
-       " 'C',\n",
+       " 'Am',\n",
+       " 'F',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'Em',\n",
+       " 'E7',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'Am',\n",
+       " 'F',\n",
        " 'C',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'Em',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'G',\n",
        " 'C',\n",
        " 'G',\n",
-       " 'D',\n",
-       " 'G/B',\n",
        " 'C',\n",
-       " 'Dsus4',\n",
-       " 'D',\n",
+       " 'F',\n",
        " 'G',\n",
+       " 'Am',\n",
+       " 'F',\n",
        " 'G',\n",
-       " 'D/F#',\n",
-       " 'Em',\n",
-       " 'D',\n",
+       " 'E7',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'Am',\n",
+       " 'F',\n",
        " 'C',\n",
-       " 'D',\n",
-       " 'G']"
+       " 'G',\n",
+       " 'C',\n",
+       " 'F',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'C',\n",
+       " 'G',\n",
+       " 'C',\n",
+       " 'F',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'C',\n",
+       " 'G',\n",
+       " 'C',\n",
+       " 'Am',\n",
+       " 'F',\n",
+       " 'G',\n",
+       " 'C']"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     }
