can now extract all the chord page links from the main page and generate a list of chord pages

--- a/src/01 - Scraping - Extracting filter criteria.ipynb
+++ b/src/01 - Scraping - Extracting filter criteria.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "HTML_PATH = '/Users/xf20939/Desktop/HALLELUJAH CHORDS (ver 2) by Jeff Buckley @ Ultimate-Guitar.Com.html'\n",
     "#CHORD_CLASS_NAME = '_3PpPJ OrSDI'\n",
     "URL = 'https://tabs.ultimate-guitar.com/tab/ed-sheeran/perfect-chords-1956589'\n",
-    "#INFO_CLASS_NAME = '_3rlxz'\n"
+    "\n"
    ]
   },
   {
@@ -48,13 +48,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "def generate_list_of_chord_page_links(main_page):\n",
+    "    #takes in a link containing a list of pages, finds all links to chord pages, returns list of these links.\n",
+    "    CHORD_PAGE_LINK_CLASSNAME = '_3DU-x JoRLr _3dYeW'\n",
+    "    main_soup = generateSoupOfWebpage(main_page_url)\n",
+    "    links_to_chord_page = main_soup.find_all('a', { 'class' : CHORD_PAGE_LINK_CLASSNAME}, href=True)\n",
+    "    list_of_chord_page_links = []\n",
+    "    for chord_page in links_to_chord_page:\n",
+    "        list_of_chord_page_links.append(chord_page['href'])\n",
+    "    return list_of_chord_page_links\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://tabs.ultimate-guitar.com/tab/coldplay/fix-you-chords-202594',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/adele/when-we-were-young-chords-1782038',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/john-denver/take-me-home-country-roads-chords-1101747',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/misc-soundtrack/a-star-is-born-shallow-chords-2480119',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/snow-patrol/chasing-cars-chords-355425',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/james-arthur/say-you-wont-let-go-chords-1874747',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/bruno-mars/grenade-chords-993953',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/the-fray/how-to-save-a-life-chords-258804',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/frank-sinatra/fly-me-to-the-moon-chords-335196',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/the-cranberries/zombie-chords-844902',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/misc-cartoons/frozen-let-it-go-chords-1445224',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/rihanna/stay-chords-1195964',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/the-script/breakeven-chords-733647',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/sam-smith/im-not-the-only-one-chords-1489018',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/don-mclean/american-pie-chords-187946',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/a-great-big-world/say-something-chords-1429805',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/james-blunt/youre-beautiful-chords-180394',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/death-cab-for-cutie/i-will-follow-you-into-the-dark-chords-335735',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/adele/make-you-feel-my-love-chords-752102',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/the-script/the-man-who-cant-be-moved-chords-716149',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/the-lumineers/ho-hey-chords-1144876',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/pnk/just-give-me-a-reason-chords-1183088',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/coldplay/yellow-chords-114080',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/bon-iver/skinny-love-chords-835053',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/foster-the-people/pumped-up-kicks-chords-1032143',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/jeff-buckley/hallelujah-chords-27336',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/4-non-blondes/whats-up-chords-349210',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/gotye/somebody-that-i-used-to-know-chords-1094597',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/the-neighbourhood/sweater-weather-chords-1237978',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/calum-scott/you-are-the-reason-chords-2267805',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/bob-dylan/knockin-on-heavens-door-chords-66559',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/mumford-sons/little-lion-man-chords-872773',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/david-guetta/titanium-chords-1098920',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/dolly-parton/jolene-chords-183019',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/green-day/21-guns-chords-823449',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/cat-stevens/father-and-son-chords-84491',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/guns-n-roses/sweet-child-o-mine-chords-176076',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/kings-of-leon/use-somebody-chords-799959',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/radiohead/karma-police-chords-103398',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/bob-marley/redemption-song-chords-417640',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/ed-sheeran/shape-of-you-chords-1928439',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/shawn-mendes/stitches-chords-1721601',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/of-monsters-and-men/little-talks-chords-1046763',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/elton-john/your-song-chords-29113',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/armada/harusnya-aku-chords-1733940',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/train/drops-of-jupiter-chords-1433',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/759809',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/imagine-dragons/demons-chords-1148110',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/ben-e-king/stand-by-me-chords-73005',\n",
+       " 'https://tabs.ultimate-guitar.com/tab/secondhand-serenade/fall-for-you-chords-630290']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#main_page_url = 'https://www.ultimate-guitar.com/explore?order=hitstotal_desc&type[]=Chords'\n",
+    "main_page_url ='https://www.ultimate-guitar.com/explore?order=hitstotal_desc&page=2&type[]=Chords'\n",
+    "generate_list_of_chord_page_links(main_page_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "                 \n",
     "\n",
-    "def generateSoupOfWebpages(url):   \n",
+    "def generateSoupOfWebpage(url):   \n",
     "    #takes in a URL, returns its soup\n",
     "    options = webdriver.ChromeOptions()\n",
     "    options.add_argument('--ignore-certificate-errors')\n",
@@ -72,7 +164,7 @@
     "    #takes in a list of urls. returns a list of page soups.\n",
     "    soups = []    \n",
     "    for url in url_list:\n",
-    "        soups.append(generateSoupOfWebpages(url))  \n",
+    "        soups.append(generateSoupOfWebpage(url))  \n",
     "    return soups\n",
     "\n",
     "# List of pages we want to scrape chords from\n",
@@ -88,20 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def getSongInfo(page_soup):\n",
     "    #takes in the soup of HTML and the class name for the HTML class in which the song info is kept\n",
+    "    INFO_CLASS_NAME = '_3rlxz'\n",
     "    song_info_spans = page_soup.find_all('span', { 'class' : INFO_CLASS_NAME }) #finds span objects with the correct class\n",
     "    song_info = [str(i.contents[0]) for i in song_info_spans] #finds contents of the span objects\n",
     "    for stri in song_info:\n",
@@ -131,66 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# <div class=\"_-8l1v\">Let It Be – The Beatles</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 544,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "author = soups[0].find_all('div', { 'class' : \"_-8l1v\" })[0].get_text()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 545,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Let It Be – The Beatles'"
-      ]
-     },
-     "execution_count": 545,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "author"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 546,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 546,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "title = soups[0].find('h1').get_text()\n",
-    "type(title)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 548,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +315,7 @@
        "0  [C, Am7, Em, Fmaj7, G, C, Am7, Em, Fmaj7, F, F...  "
       ]
      },
-     "execution_count": 548,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
