--- a/src/Chord_scraping.ipynb
+++ b/src/Chord_scraping.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ultimate Guitar Scraping. First part: extracting filter items"
+    "# Ultimate Guitar Scraping."
    ]
   },
   {
@@ -34,16 +34,6 @@
     "#CHORD_CLASS_NAME = '_3PpPJ OrSDI'\n",
     "URL = 'https://tabs.ultimate-guitar.com/tab/ed-sheeran/perfect-chords-1956589'\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODOs:\n",
-    "\n",
-    "1) change my function to populate a dataframe given a LIST\n",
-    "2) instead of giving me chord list, make jack's code give me out a dataframe"
    ]
   },
   {
