--- a/Chord_scraping.ipynb
+++ b/Chord_scraping.ipynb
@@ -302,7 +302,8 @@
    "hash": "38b5f35d414aea861dc92c0af740ac1c097243deca390b01be4d19b5618cb3d0"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('chord_scraping': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -315,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
