work done to generate_sequences.py and generate_training_data.py. sequences is an np array holding all songs with chords encoded as integers. targets, contexts and labels are the training data

--- a/word2vec/skipgram.ipynb
+++ b/word2vec/skipgram.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89981,13 +89981,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* context_class : a tensorflow object"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
@@ -90137,6 +90130,107 @@
     "print(f\"context_chords   : {[inv_vocab[c.numpy()] for c in context]}\")\n",
     "print(f\"label           : {label}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# generate training data\n",
+    "all steps above compiled into one func."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generates skip-gram pairs with negative sampling for a list of sequences\n",
+    "# (int-encoded sentences) based on window size, number of negative samples\n",
+    "# and vocabulary size.\n",
+    "def generate_training_data(sequences, window_size, num_ns, vocab_size, seed):\n",
+    "  # Elements of each training example are appended to these lists.\n",
+    "  targets, contexts, labels = [], [], []\n",
+    "\n",
+    "  # Build the sampling table for `vocab_size` tokens.\n",
+    "  sampling_table = tf.keras.preprocessing.sequence.make_sampling_table(vocab_size)\n",
+    "\n",
+    "  # Iterate over all sequences (sentences) in the dataset.\n",
+    "  for sequence in tqdm.tqdm(sequences):\n",
+    "\n",
+    "    # Generate positive skip-gram pairs for a sequence (sentence).\n",
+    "    positive_skip_grams, _ = tf.keras.preprocessing.sequence.skipgrams(\n",
+    "          sequence,\n",
+    "          vocabulary_size=vocab_size,\n",
+    "          sampling_table=sampling_table,\n",
+    "          window_size=window_size,\n",
+    "          negative_samples=0)\n",
+    "\n",
+    "    # Iterate over each positive skip-gram pair to produce training examples\n",
+    "    # with a positive context word and negative samples.\n",
+    "    for target_word, context_word in positive_skip_grams:\n",
+    "      context_class = tf.expand_dims(\n",
+    "          tf.constant([context_word], dtype=\"int64\"), 1)\n",
+    "      negative_sampling_candidates, _, _ = tf.random.log_uniform_candidate_sampler(\n",
+    "          true_classes=context_class,\n",
+    "          num_true=1,\n",
+    "          num_sampled=num_ns,\n",
+    "          unique=True,\n",
+    "          range_max=vocab_size,\n",
+    "          seed=seed,\n",
+    "          name=\"negative_sampling\")\n",
+    "\n",
+    "      # Build context and label vectors (for one target word)\n",
+    "      context = tf.concat([tf.squeeze(context_class,1), negative_sampling_candidates], 0)\n",
+    "      label = tf.constant([1] + [0]*num_ns, dtype=\"int64\")\n",
+    "\n",
+    "      # Append each element from the training example to global lists.\n",
+    "      targets.append(target_word)\n",
+    "      contexts.append(context)\n",
+    "      labels.append(label)\n",
+    "\n",
+    "  return targets, contexts, labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encode chord progressions as sequences\n",
+    "What are sequences?\n",
+    "like sentences represented as integers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'vocab_size' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m vectorize_layer \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mTextVectorization(\n\u001b[0;32m      2\u001b[0m     standardize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m----> 3\u001b[0m     max_tokens\u001b[38;5;241m=\u001b[39m\u001b[43mvocab_size\u001b[49m,\n\u001b[0;32m      4\u001b[0m     output_mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mint\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'vocab_size' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "vectorize_layer = layers.TextVectorization(\n",
+    "    standardize=None,\n",
+    "    max_tokens=vocab_size,\n",
+    "    output_mode='int')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
