embeddings generated and dimensionality reduced. 3-dimensional scatter created

--- a/word2vec/skipgram.ipynb
+++ b/word2vec/skipgram.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -88733,7 +88733,7 @@
        "  'Bb']]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88777,7 +88777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88786,7 +88786,7 @@
        "453122"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88810,7 +88810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -88819,7 +88819,7 @@
        "(1115,)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88839,7 +88839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -89848,7 +89848,7 @@
        " ...}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89872,7 +89872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -89906,7 +89906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -89932,16 +89932,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[23, 313], [950, 313], [313, 755], [755, 475], [479, 755]]"
+       "[[950, 755], [755, 950], [313, 475], [950, 475], [950, 475]]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89960,18 +89960,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(23, 313): (A/C#, C)\n",
-      "(950, 313): (G, C)\n",
-      "(313, 755): (C, Em)\n",
-      "(755, 475): (Em, D)\n",
-      "(479, 755): (D#5, Em)\n"
+      "(950, 755): (G, Em)\n",
+      "(755, 950): (Em, G)\n",
+      "(313, 475): (C, D)\n",
+      "(950, 475): (G, D)\n",
+      "(950, 475): (G, D)\n"
      ]
     }
    ],
@@ -89982,7 +89982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -90034,7 +90034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90058,16 +90058,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(5,), dtype=int64, numpy=array([313,  75,  11, 288,  29], dtype=int64)>"
+       "<tf.Tensor: shape=(5,), dtype=int64, numpy=array([755,  75,  11, 288,  29], dtype=int64)>"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90078,16 +90078,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "23"
+       "950"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90108,17 +90108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "target_index    : 23\n",
-      "target_chord     : A/C#\n",
-      "context_indices : [313  75  11 288  29]\n",
-      "context_chords   : ['C', 'Aaug/Eb', 'A#m7b5', 'Bm6', 'A/G#']\n",
+      "target_index    : 950\n",
+      "target_chord     : G\n",
+      "context_indices : [755  75  11 288  29]\n",
+      "context_chords   : ['Em', 'Aaug/Eb', 'A#m7b5', 'Bm6', 'A/G#']\n",
       "label           : [1 0 0 0 0]\n"
      ]
     }
@@ -90141,7 +90141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90198,38 +90198,20 @@
    "source": [
     "## Encode chord progressions as sequences\n",
     "What are sequences?\n",
-    "like sentences represented as integers"
+    "like sentences represented as integers.\n",
+    "\n",
+    "the sequences variable is a long list of shape (10,) arrays, each representing one sentence\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'vocab_size' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m vectorize_layer \u001b[38;5;241m=\u001b[39m layers\u001b[38;5;241m.\u001b[39mTextVectorization(\n\u001b[0;32m      2\u001b[0m     standardize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m----> 3\u001b[0m     max_tokens\u001b[38;5;241m=\u001b[39m\u001b[43mvocab_size\u001b[49m,\n\u001b[0;32m      4\u001b[0m     output_mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mint\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'vocab_size' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "vectorize_layer = layers.TextVectorization(\n",
-    "    standardize=None,\n",
-    "    max_tokens=vocab_size,\n",
-    "    output_mode='int')"
-   ]
+   "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
