Made function comments more readable

--- a/chord_translation/chord_key_translation.ipynb
+++ b/chord_translation/chord_key_translation.ipynb
@@ -32,21 +32,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "8380b292-12ea-4600-882f-093eceb0ba58",
    "metadata": {},
    "outputs": [],
    "source": [
     "def translate_chord(key, chord):\n",
+    "    # convert chords to numbers\n",
     "    key_number = notedict[key]\n",
     "    chord_number = notedict[chord]\n",
-    "    diff = chord_number-key_number\n",
-    "    return(diff%7+1)"
+    "    \n",
+    "    # find difference between chord numbers and convert to positive number below 7\n",
+    "    diff = (chord_number-key_number) % 7\n",
+    "\n",
+    "    # add 1 to get chord number as in music theory (between I and VII)\n",
+    "    final_chord_number = diff + 1\n",
+    "    \n",
+    "    return(final_chord_number)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "ff5e2c14-5541-4415-94cf-8cf0e2708367",
    "metadata": {},
    "outputs": [
@@ -56,7 +63,7 @@
        "7"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
