--- a/chord_translation/chord_key_translation.ipynb
+++ b/chord_translation/chord_key_translation.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "28617fb1-e18d-4a41-b12a-03ec4fddea79",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
+   "id": "ae6c1e24-2d38-4370-b932-7e17650ac8e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# inverted dictionary\n",
+    "inv_notedict = {v: k for k, v in notedict.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "8380b292-12ea-4600-882f-093eceb0ba58",
    "metadata": {},
    "outputs": [],
@@ -53,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "ff5e2c14-5541-4415-94cf-8cf0e2708367",
    "metadata": {},
    "outputs": [
@@ -63,7 +74,7 @@
        "7"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,8 +85,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "138f23f4-b8d7-4998-a59c-38b9b87a4f63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def key_capo(key, capo_number):\n",
+    "    # convert key to numbers\n",
+    "    key_number = notedict[key]\n",
+    "\n",
+    "    # find new key number modulo 7\n",
+    "    new_key_number = (key_number - capo_number) % 7\n",
+    "\n",
+    "    # convert number into note for key\n",
+    "    new_key = inv_notedict[new_key_number]\n",
+    "    \n",
+    "    return(new_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "acc2eb36-4e57-484c-ba2e-e613493370f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'E'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key_capo(\"F\",1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "426ed1eb-0bb6-404a-bb73-ca359180af6b",
    "metadata": {},
    "outputs": [],
    "source": []
